load("@aspect_rules_py//py:defs.bzl", "py_test")

py_test(
    name = "test_rpm_helpers",
    srcs = ["test_rpm_helpers.py"],
    deps = [
        "//apollo/rpm_helpers:rpm_helpers_lib",
    ],
)

py_test(
    name = "test_csaf_processing",
    srcs = ["test_csaf_processing.py", "test_db_config.py"],
    deps = [
        "//apollo/rhworker:rhworker_lib",
        "//apollo/db:db_lib",
        "//common:common_lib",
    ],
)

py_test(
    name = "test_rhcsaf",
    srcs = ["test_rhcsaf.py"],
    deps = [
        "//apollo/rhcsaf:rhcsaf_lib",
        "//apollo/rpm_helpers:rpm_helpers_lib",
        "//common:common_lib",
    ],
)

py_test(
    name = "test_red_hat_advisory_updates",
    srcs = ["test_red_hat_advisory_updates.py", "test_db_config.py"],
    deps = [
        "//apollo/rhworker:rhworker_lib",
        "//apollo/db:db_lib",
        "//common:common_lib",
    ],
)